--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,8 @@
               "tsConfig": "tsconfig.app.json",
               "assets": [
                 "src/favicon.ico",
-                "src/assets"
+                "src/assets",
+                "_redirects"
               ],
               "styles": [
                 "node_modules/primeng/resources/themes/lara-light-indigo/theme.css",
